basic structure added

--- a/index.html
+++ b/index.html
@@ -5,10 +5,39 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="javascript.js" defer></script>
-    <link rel="stylesheet" src="styles.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
+    <title>Cell Game</title>
 </head>
 <body>
-    
+    <div class="header">
+        <h1>Cell Game</h1>
+        <button>Instructions</button>
+    </div>
+<div class="game-container">
+    <div class="main-container">
+        <div class="variable-container">
+            Game Variables
+        </div>
+        <div class="cell-buttons-container">
+            <button>Mitochondria</button>
+            <button>Cell Membrane</button>
+            <button>Nucleus</button>
+            <button>Ribosome</button>
+        </div>
+
+        <div class="cell-image-container">
+            Image
+        </div>
+
+        <div class="cell-actions-container">
+            Action Buttons
+        </div>
+
+        <div class="display-container">
+            Display Messages
+        </div>
+
+    </div>
+</div>    
 </body>
 </html>
