added class names/ids

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
             Game Variables
         </div>
         <div class="cell-buttons-container">
-            <button>Mitochondria</button>
-            <button>Cell Membrane</button>
-            <button>Nucleus</button>
-            <button>Ribosome</button>
+            <button id="mitochondria" class="btn-action">Mitochondria</button>
+            <button id = "cell-membrane" class="btn-action">Cell Membrane</button>
+            <button id = "nucleus" class="btn-action">Nucleus</button>
+            <button id="ribosome" class="btn-action">Ribosome</button>
         </div>
 
         <div class="cell-image-container">
@@ -30,11 +30,11 @@
         </div>
 
         <div class="cell-actions-container">
-            Action Buttons
+            
         </div>
 
         <div class="display-container">
-            Display Messages
+            
         </div>
 
     </div>
