added sections for each game variable

--- a/index.html
+++ b/index.html
@@ -16,7 +16,32 @@
 <div class="game-container">
     <div class="main-container">
         <div class="variable-container">
-            Game Variables
+            <div class="variable" id = "glucose">
+                
+            </div>
+
+            <div class="variable" id = "atp">
+            
+            </div>
+            <div class="variable" id ="oxygen">
+
+            </div>
+
+            <div class="variables" id = "proteins">
+
+            </div>
+
+            <div class="variables" id = "ser">
+
+            </div>
+
+            <div class="variables" id = "met">
+
+            </div>
+
+            <div class="variables" id = "val">
+
+            </div>
         </div>
         <div class="cell-buttons-container">
             <button id="mitochondria" class="btn-action">Mitochondria</button>
