--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="header">
         <h1>Cell Game</h1>
-        <button>Instructions</button>
+        <button id = "start">Instructions</button>
     </div>
 <div class="game-container">
     <div class="main-container">
@@ -24,6 +24,10 @@
             
             </div>
             <div class="variable" id ="oxygen">
+
+            </div>
+
+            <div class="variable" id ="co2">
 
             </div>
 
