--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </div>
 
         <div class="cell-image-container">
-            Image
+            <img src = "images/mitochondria.png" class = "image" id = "mito-img">
         </div>
 
         <div class="cell-actions-container">
