added organell images

--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@
 
         <div class="cell-image-container">
             <img src = "images/mitochondria.png" class = "image" id = "mito-img">
+            <img src = "images/cell-membrane.png" class = "image" id = "cellMem-img">
+            <img src = "images/nucleus.jpg" class="image" id ="nucleus-img">
+            <img src = "images/ribosome.jpg" class ="image" id = "ribosome-img">
         </div>
 
         <div class="cell-actions-container">
