write instructions for game

--- a/index.html
+++ b/index.html
@@ -14,6 +14,67 @@
         <button id = "start">Instructions</button>
     </div>
 <div class="game-container">
+    <div class="start-container">
+        <div class="introduction">
+            Welcome to the Cell Game! In this game you will siliate the various functions that organelles
+            inside of a cell perform. The purpose of the game is to produce proteins! In order to do so,
+            there are various resources you must manage and actions you must take.
+        </div>
+        <div class="resources">
+            <h3>Resources</h3>
+            There are several resources which you must manage to be successful.
+
+            <ul>
+                <li><b>ATP</b> ATP is a molelie that cells use for energy. Most actions require ATP to function.</li>
+                <li><b>Glucose</b>: Glucose is a sugar molelie. Glucose is used to produce more ATP.</li>
+                <li><b>Oxygen</b>: Oxygen is a gas necessary for life. Oxygen is used to produce more ATP.</li>
+                <li><b>Carbon Dioxide</b>: Carbon dioxide is a waste produce produced after a cell performs respiration to produce more ATP.
+                    It has no use for the cell and must be released before it gets too high.
+                </li>
+                <li><b>MET</b>: MET is an amino acid. It is used to produce proteins.</li>
+                <li><b>SER</b>: SER is an amino acid. It is used to produce proteins.</li>
+                <li><b>VAL</b> VAL is an amino acid. It is used to produce proteins.</li>
+                <li><b>Protein</b> Protein is an essential molelie for life. Proteins perform many different tasks. Cells 
+                    produce proteins in the ribosome.
+                </li>
+            <ul>
+        </div>
+        <div class="organelles">
+                <h3>Organelles</h3>
+                Organelles are small structures found inside a cell. Each structure has a specific function.
+
+                <h4>Mitochondria</h4>
+                The mitochondria is responsible for producing ATP for the cell.
+                <ul>
+                    <li><b>Produce ATP:</b> Requires 1 glucose and 1 oxygen. Produces 3 ATP.</li>
+                </ul>
+
+                <h4>Cell Membrane</h4>
+                The cell membrane is responsible for protecting the cell and allowing materials in and out.
+                <ul>
+                    <li><b>Get Glucose:</b> Requires 1 ATP. Adds 1 glucose.</li>
+                    <li><b>Get Amino Acid:</b> Requires 1 ATP. Adds 1 MET, SER or VAL.</li>
+                    <li><b>Get Oxygen:</b> Adds 1 oxygen.</li>
+                    <li><b>Release Carbon Dioxide:</b> Releases all carbon dioxide in the cell.</li>
+                </ul>
+
+                <h4>Nucleus</h4>
+                The nucleus controls all cell activities. It also contains all DNA.
+                <ul>
+                    <li><b>Check Gene:</b> Requires 1 ATP. Checks a gene in the nucleus and provides list of necessary amino acids.</li>
+                </ul>
+
+                <h4>Ribosome</h4>
+                The ribosomes are where protein is synthesized.
+                <ul>
+                    <li><b>Produce Protein: </b>Requires 1 ATP. Produces a protein once the correct order of amino acids have been entered.</li>
+                </ul>
+        </div>
+
+        <div class="return">
+            <button id = "back-button">BACK</button>
+        </div>
+    </div>
     <div class="main-container">
         <div class="variable-container">
             <div class="variable" id = "glucose">
