added dropdown with all amino acids

--- a/index.html
+++ b/index.html
@@ -127,7 +127,29 @@
         </div>
 
         <div class="display-container">
-            
+            <label for "aminoacidsname">Choose an amino acid:</label>
+                <select name = "aminoacidsname" id = "aminoacidsname">
+                    <option value = "Phe">Phe</option>
+                    <option value = "Leu">Leu</option>
+                    <option value = "Met">Met</option>
+                    <option value = "Val">Val</option>
+                    <option value = "Ser">Ser</option>
+                    <option value = "Pro">Pro</option>
+                    <option value = "Thr">Thr</option>
+                    <option value = "Ala">Ala</option>
+                    <option value = "Tyr">Tyr</option>
+                    <option value = "His">His</option>
+                    <option value = "Gin">Gin</option>
+                    <option value = "Asn">Asn</option>
+                    <option value = "Lys">Lys</option>
+                    <option value = "Asp">Asp</option>
+                    <option value = "Glu">Glu</option>
+                    <option value = "Cys">Cys</option>
+                    <option value = "Trp">Trp</option>
+                    <option value = "Arg">Arg</option>
+                    <option value = "Gly">Gly</option>
+                </select>
+                <button id="selectaminoacid">Select</button>
         </div>
 
     </div>
