adapted to allow new amino acid function to appear on DOM, still need to modify to display all new amino acid variables on DOM

--- a/index.html
+++ b/index.html
@@ -127,6 +127,7 @@
         </div>
 
         <div class="display-container">
+            <div class="aminoacid-select-container">
             <label for "aminoacidsname">Choose an amino acid:</label>
                 <select name = "aminoacidsname" id = "aminoacidsname">
                     <option value = "Phe">Phe</option>
@@ -150,6 +151,7 @@
                     <option value = "Gly">Gly</option>
                 </select>
                 <button id="selectaminoacid">Select</button>
+            </div>
         </div>
 
     </div>
