changed classes of cell action buttons

--- a/index.html
+++ b/index.html
@@ -109,10 +109,10 @@
             </div>
         </div>
         <div class="cell-buttons-container">
-            <button id="mitochondria" class="btn-action">Mitochondria</button>
-            <button id = "cell-membrane" class="btn-action">Cell Membrane</button>
-            <button id = "nucleus" class="btn-action">Nucleus</button>
-            <button id="ribosome" class="btn-action">Ribosome</button>
+            <button id="mitochondria" class="cell-btn-action">Mitochondria</button>
+            <button id = "cell-membrane" class="cell-btn-action">Cell Membrane</button>
+            <button id = "nucleus" class="cell-btn-action">Nucleus</button>
+            <button id="ribosome" class="cell-btn-action">Ribosome</button>
         </div>
 
         <div class="cell-image-container">
