--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
 
         <div class="display-container">
             <div class="aminoacid-select-container">
-            <label for "aminoacidsname">Choose an amino acid:</label>
+            <label>Choose an amino acid:</label>
                 <select name = "aminoacidsname" id = "aminoacidsname">
                     <option value = "Phe">Phe</option>
                     <option value = "Leu">Leu</option>
